2003-07-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/news/database.py: NewsShelf.articleRequest() and
	NewsShelf.bodyRequest() now expected to return a file-like object
	in the last position of its returned three-tuple.  The old API
	is still supported, but deprecated.

2003-07-03  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: add gadfly test

	* twisted/web/woven/input.py: remove excess newline.

	* twisted/trial/unittest.py: take out unused methodPrefix var

	* twisted/enterprise/adbapi.py: accept 'noisy' kw arg. persist
	noisy, min, and max args. just warn about non-dbapi db libs.

	* twisted/enterprise/reflector.py: fix spelling

	* twisted/enterprise/sqlreflector.py 80 columns, don't addToCache
	in insertRow

	* twisted/enterprise/xmlreflector.py: 80 columns

2003-07-01  Brian Warner  <warner@lothar.com>

	* sandbox/warner/fusd_twisted.py: experimental glue code for FUSD,
	a system for implementing Linux device drivers in userspace

2003-06-27  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6rc3. Fixed a security bug in
	twisted.web.

	* .: Releasing Twisted 1.0.6rc4. One more twisted.web bug.

	* .: Releasing Twisted 1.0.6.

2003-06-26  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6rc1.

	* .: Releasing Twisted 1.0.6rc2. Pop3 had failing tests.

2003-06-26  Clark C. Evans  <cce@twistedmatrix.com>

	* twisted/flow/*.py: Moved Flow from the sandbox to
	twisted.flow. The callback is dead. Long live the callback!

2003-06-26  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/pop3.py: POP3.authenticateUserXYZ no longer
	returns a Mailbox object. It now returns a 3-tuple. See
	twisted.cred.portal.Portal.login for more details about the return
	value.
	
2003-06-24  Brian Warner  <warner@lothar.com>

	* doc/howto/upgrading.html: Explain Versioned and rebuild()

2003-06-23  Christopher Armstrong  <radix@twistedmatrix.com>
