@@ -1,9 +1,23 @@
-# -*- coding: Latin-1 -*-
+# Twisted, the Framework of Your Internet
+# Copyright (C) 2001 Matthew W. Lefkowitz
+# 
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of version 2.1 of the GNU Lesser General Public
+# License as published by the Free Software Foundation.
+# 
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# Lesser General Public License for more details.
+# 
+# You should have received a copy of the GNU Lesser General Public
+# License along with this library; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 import os
 import shutil
 
-import dir
+from twisted.python import dir
 from twisted.trial import unittest
 
 class DirTestCase(unittest.TestCase):
@@ -69,3 +83,19 @@ class DirTestCase(unittest.TestCase):
         L = list(d.scan(lambda d: d[0].startswith('5')))
         self.assertEquals(len(L), 1)
         self.assertEquals(L[0][0], '5')
+
+class FunctionsTestCase(unittest.TestCase):
+    def testListDirectories(self):
+        d = dir.listDirectories(os.pardir)
+        self.failIf(os.curdir in d)
+        self.failIf(os.pardir in d)
+        
+        d.sort()
+        listed = []
+        for D in os.listdir(os.pardir):
+            Dir = os.path.join(os.pardir, D)
+            if os.path.isdir(Dir) and not os.path.islink(Dir):
+                listed.append(D)
+        listed.sort()
+        
+        self.assertEquals(listed, d)
